corrected home page, got almost all of profile page setup, just delete button left, some minor changes to customizeprofile to align with profile page

--- a/UnIFront/src/pages/customizeProfile/CustomizeProfile.css
+++ b/UnIFront/src/pages/customizeProfile/CustomizeProfile.css
@@ -6,13 +6,31 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.account-customization {
+.profile-customization {
     padding: 20px;
-    max-width: 500px;
-    margin: auto;
+    width: 1000px;
+    height: 90%;
     background-color: #1a2b5d;
     border-radius: 10px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.profileCustomizationForm {
+    margin-top: 60px;
+    display: flex;
+    flex-direction:column;
+    justify-content:space-between;
+    position:absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40%;
+    height: 700px;
+    background-color: rgb(92, 92, 99);
+    border: 2px solid white;
+    border-radius: 10px;
+    padding: 15px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 form {
@@ -28,6 +46,7 @@ label {
 }
 
 input {
+    margin-left: 10px;
     padding: 8px;
     border-radius: 5px;
     border: none;
